browser/themes/shared/customizableui/panelUI.inc.css
/* ... */
.
panel
-
banner
-
item
[
notificationid
^
=
update
]
{
list
-
style
-
image
:
url
(
chrome
:
/
/
branding
/
content
/
icon16
.
png
)
;
}
#
PanelUI
-
menu
-
button
[
badge
-
status
=
"
download
-
warning
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
badge
#
PanelUI
-
menu
-
button
[
badge
-
status
=
"
fxa
-
needs
-
authentication
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
badge
{
box
-
shadow
:
none
;
filter
:
drop
-
shadow
(
0
1px
0
hsla
(
206
50
%
10
%
.
15
)
)
;
}
#
PanelUI
-
menu
-
button
[
badge
-
status
=
"
download
-
warning
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
badge
#
PanelUI
-
menu
-
button
[
badge
-
status
=
"
download
-
severe
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
badge
{
width
:
7px
;
height
:
7px
;
min
-
width
:
0
;
border
-
radius
:
50
%
;
margin
-
top
:
-
1px
!
important
;
margin
-
right
:
-
2px
!
important
;
}
#
PanelUI
-
menu
-
button
[
badge
-
status
=
"
download
-
warning
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
badge
{
background
:
#
FFBF00
;
}
#
PanelUI
-
menu
-
button
[
badge
-
status
=
"
download
-
severe
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
badge
{
background
:
#
D90000
;
}
#
PanelUI
-
menu
-
button
[
badge
-
status
=
"
fxa
-
needs
-
authentication
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
badge
{
height
:
13px
;
background
:
transparent
url
(
chrome
:
/
/
browser
/
skin
/
warning
.
svg
)
no
-
repeat
center
;
}
#
PanelUI
-
menu
-
button
[
badge
-
status
=
"
download
-
warning
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
badge
:
-
moz
-
window
-
inactive
#
PanelUI
-
menu
-
button
[
badge
-
status
=
"
fxa
-
needs
-
authentication
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
badge
:
-
moz
-
window
-
inactive
{
filter
:
none
;
}
#
PanelUI
-
menu
-
button
[
badge
-
status
=
"
addon
-
alert
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
badge
{
height
:
13px
;
background
:
#
FFBF00
url
(
chrome
:
/
/
browser
/
skin
/
update
-
badge
-
failed
.
svg
)
no
-
repeat
center
;
}
.
panel
-
subviews
{
padding
:
4px
;
background
-
clip
:
padding
-
box
;
border
-
left
:
1px
solid
var
(
-
-
arrowpanel
-
border
-
color
)
;
box
-
shadow
:
0
3px
5px
hsla
(
210
4
%
10
%
.
1
)
0
0
7px
hsla
(
210
4
%
10
%
.
1
)
;
margin
-
inline
-
start
:
var
(
-
-
panel
-
ui
-
exit
-
subview
-
gutter
-
width
)
;
}
.
panel
-
viewstack
[
viewtype
=
"
main
"
]
>
.
panel
-
subviews
{
transform
:
translateX
(
menuPanelWidth
)
;
}
.
panel
-
viewstack
[
viewtype
=
"
main
"
]
>
.
panel
-
subviews
:
-
moz
-
locale
-
dir
(
rtl
)
{
transform
:
translateX
(
-
menuPanelWidth
)
;
}
panelview
{
-
moz
-
box
-
orient
:
vertical
;
-
moz
-
box
-
flex
:
1
;
}
#
downloadsPanel
#
widget
-
overflow
#
appMenu
-
popup
#
customizationui
-
widget
-
panel
{
margin
-
top
:
-
6px
;
}
#
pageActionActivatedActionPanel
#
pageActionPanel
#
editBookmarkPanel
.
browser
-
extension
-
panel
{
margin
-
top
:
calc
(
var
(
-
-
toolbarbutton
-
inner
-
padding
)
-
var
(
-
-
urlbar
-
icon
-
padding
)
-
6px
)
}
#
identity
-
popup
{
margin
-
top
:
calc
(
var
(
-
-
toolbarbutton
-
inner
-
padding
)
-
6px
)
;
}
#
downloadsPanel
.
bookmarks
-
toolbar
#
widget
-
overflow
.
bookmarks
-
toolbar
#
appMenu
-
popup
.
bookmarks
-
toolbar
#
customizationui
-
widget
-
panel
.
bookmarks
-
toolbar
{
margin
-
top
:
-
1px
;
}
#
BMB_bookmarksPopup
{
margin
-
top
:
-
8px
;
}
:
root
:
not
(
[
uidensity
]
)
#
nav
-
bar
#
BMB_bookmarksPopup
{
margin
-
top
:
-
11px
;
}
:
root
[
uidensity
=
touch
]
#
nav
-
bar
#
BMB_bookmarksPopup
:
root
[
uidensity
=
touch
]
#
TabsToolbar
#
BMB_bookmarksPopup
:
root
[
uidensity
=
compact
]
#
BMB_bookmarksPopup
{
margin
-
top
:
-
9px
;
}
:
root
[
uidensity
=
compact
]
#
TabsToolbar
#
BMB_bookmarksPopup
{
margin
-
top
:
-
7px
;
}
.
panel
-
subview
-
body
{
overflow
-
y
:
auto
;
overflow
-
x
:
hidden
;
-
moz
-
box
-
flex
:
1
;
}
.
panel
-
view
-
body
-
unscrollable
{
overflow
:
hidden
;
-
moz
-
box
-
flex
:
1
;
}
#
PanelUI
-
popup
.
panel
-
subview
-
body
{
margin
:
-
4px
;
padding
:
4px
4px
;
}
.
subviewbutton
.
panel
-
subview
-
footer
{
box
-
sizing
:
border
-
box
;
min
-
height
:
41px
;
}
.
cui
-
widget
-
panelview
menuitem
.
subviewbutton
.
panel
-
subview
-
footer
{
margin
:
4px
0
0
;
}
.
cui
-
widget
-
panelview
.
subviewbutton
.
panel
-
subview
-
footer
>
.
menu
-
text
{
-
moz
-
box
-
flex
:
1
;
}
#
appMenu
-
popup
>
arrowscrollbox
>
autorepeatbutton
#
PanelUI
-
popup
>
arrowscrollbox
>
autorepeatbutton
{
display
:
none
;
}
#
appMenu
-
popup
>
arrowscrollbox
>
scrollbox
#
PanelUI
-
popup
>
arrowscrollbox
>
scrollbox
{
overflow
:
visible
;
}
#
appMenu
-
popup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
panel
[
photon
]
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
overflow
:
hidden
;
}
#
PanelUI
-
popup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
.
cui
-
widget
-
panel
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
>
.
popup
-
internal
-
box
{
padding
:
0
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
multiline
-
text
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
multiline
-
text
{
line
-
height
:
1
.
2
;
max
-
height
:
2
.
4em
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
:
not
(
[
auto
-
hyphens
=
"
off
"
]
)
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
multiline
-
text
.
panelUI
-
grid
.
toolbarbutton
-
1
:
not
(
[
auto
-
hyphens
=
"
off
"
]
)
>
.
toolbarbutton
-
multiline
-
text
{
-
moz
-
hyphens
:
auto
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
multiline
-
text
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
multiline
-
text
{
position
:
absolute
;
clip
:
rect
(
-
0
.
1em
auto
2
.
6em
auto
)
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
text
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
multiline
-
text
{
text
-
align
:
center
;
margin
:
2px
0
0
!
important
;
}
/* ... */

